<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/irIngresar"
        android:layout_width="308dp"
        android:layout_height="76dp"
        android:layout_marginBottom="228dp"
        android:background="@drawable/buttom_border"
        android:contentDescription="@null"
        android:ellipsize="none"
        android:fontFamily="@font/eb_garamond_semibold"
        android:gravity="center"
        android:text="@string/ingresar"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="44sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/recuperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/vollkorn_medium"
        android:text="@string/recuperacion"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.721" />

    <Button
        android:id="@+id/ir_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="35dp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/vollkorn_medium"
        android:stateListAnimator="@null"
        android:text="@string/registro"
        android:textColor="@color/blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:fontFamily="@font/vollkorn_medium"
        android:text="@string/sin_cuenta"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="305dp"
        android:layout_height="72dp"
        android:layout_marginBottom="352dp"
        android:fontFamily="@font/lora_italic"
        android:text="@string/descripcion"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="136dp"
        android:layout_height="131dp"
        android:layout_marginStart="-10dp"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/icono" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:fontFamily="@font/vollkorn_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="43sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.075" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/buttom_border2"
        android:ems="20"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.357" />


    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="240dp"
        android:layout_height="52dp"
        android:layout_marginTop="104dp"
        android:background="@drawable/buttom_border2"
        android:ems="8"
        android:hint="@string/contraseña"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="75dp"
        android:layout_height="120dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.389"
        app:srcCompat="@drawable/icono2" />

    <LinearLayout
        android:id="@+id/btnGoogle"
        android:layout_width="320dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/google_buttom_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858">

        <ImageView
            android:id="@+id/logoGoogle"
            android:layout_width="55dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/google"
            android:src="@drawable/google" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="265dp"
            android:layout_height="47dp"
            android:background="@null"
            android:fontFamily="@font/vollkorn_bold"
            android:gravity="start|center_vertical"
            android:text="@string/google"
            android:textColor="@color/black"
            android:textSize="28sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>